removed warnings untested