@@ -6,6 +6,7 @@ package logisim.util;
 import java.io.BufferedInputStream;
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.LinkedList;
@@ -164,7 +165,7 @@ public class ZipClassLoader extends ClassLoader {
 					ZipEntry zipEntry = zipFile.getEntry(res);
 					if (zipEntry != null) {
 						String url = "jar:" + zipPath.toURI() + "!/" + res;
-						ret = new URL(url);
+						ret = new URI(url).toURL();
 						if (DEBUG >= 3)
 							System.err.println("  found: " + url); // OK
 					}
